--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     </nav>
 
     <section id="featured-property">
-      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-
+      <figure>
+        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+        <figcaption>345 Carl Street Apt 12, Carrol Rd., Brooklyn, NY - Photo by Denise Richards</figcaption>
+      </figure>
       <!--
       foldername/ = go inside the folder.
       filename = use a file in the current folder.
@@ -37,11 +39,18 @@
     </section>
     <!-- Promo Video -->
     <section id='promotional'>
-      <video controls>
-        <source src='http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4' type='video/mp4'>
-        <source src='http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv' type='video/ogg'>
-        Your browser does not support HTML5 video. <a href='http://browsehappy.com' target='_blank'>Please upgrade your browser.</a>
-      </video>
+      <figure>
+        <video controls>
+          <source src='http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4' type='video/mp4'>
+          <source src='http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv' type='video/ogg'>
+          Your browser does not support HTML5 video. <a href='http://browsehappy.com' target='_blank'>Please upgrade your browser.</a>
+        </video>
+        <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+      </figure>
     </section>
+
+    <footer>
+      &copy; 2017 Exceptional Realty. All Rights Reserved.
+    </footer>
   </body>
 </html>
